--- a/package.json
+++ b/package.json
@@ -7,11 +7,31 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "common": "rm -rf node_modules/ && sleep 10 && npm install --legacy-peer-deps && npm run podSetup",
+    "updateAsset": "npx react-native-asset",
+    "podInstall": "cd ios && pod install && cd ../",
+    "cleanGradle": "cd android && ./gradlew clean && cd ../",
+    "podUnInstall": "cd ios && pod deintegrate && cd ../",
+    "podSetup": "npm run podUnInstall && npm run podInstall"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    
+    "lottie-react-native": "^7.0.0",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.4.1",
+    "react-native-reanimated": "^3.16.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,11 +44,13 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@types/react-native-vector-icons": "^6.4.18"
   },
   "engines": {
     "node": ">=18"
