-set mmkv storage with redux toolkit. -add geo location library. -set persist value. -add axios.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@components/*":["components/*"],
       "@state/*":["state/*"],
       "@utils/*":["utils/*"],
+      "@store/*": ["store/*"]
     }
   }
 }
