--- a/ios/greenGroser/Info.plist
+++ b/ios/greenGroser/Info.plist
@@ -31,8 +31,15 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+<!-- Location permission -->
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string>Your location is used to show the delivery progress on the map</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Your location is used to show the delivery progress on the map</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your location is used to show the delivery progress on the map</string>
+<!-- Location permission -->
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
