--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "podSetup": "npm run podUnInstall && npm run podInstall"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "^7.0.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "2.12.2",
     "react-native-pager-view": "^6.4.1",
     "react-native-reanimated": "^3.16.0",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -31,7 +36,9 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.8.0",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,6 +49,7 @@
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -49,8 +57,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4",
-    "@types/react-native-vector-icons": "^6.4.18"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
