-set views folder for mvvm architecture.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
       "@components/*":["components/*"],
       "@state/*":["state/*"],
       "@utils/*":["utils/*"],
-      "@store/*": ["store/*"]
+      "@store/*": ["store/*"],
+      "@views/*": ["views/*"],
     }
   }
 }
