--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "podSetup": "npm run podUnInstall && npm run podInstall"
   },
   "dependencies": {
+    "@homielab/react-native-auto-scroll": "^0.0.10",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.1.18",
