--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
     "podSetup": "npm run podUnInstall && npm run podInstall"
   },
   "dependencies": {
-    "@homielab/react-native-auto-scroll": "^0.0.10",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/geolocation": "^3.4.0",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@reduxjs/toolkit": "^2.3.0",
-    "axios": "^1.7.7",
-    "jwt-decode": "^4.0.0",
-    "lottie-react-native": "^7.0.0",
+    "@homielab/react-native-auto-scroll": "0.0.10",
+    "@react-native-async-storage/async-storage": "2.0.0",
+    "@react-native-community/geolocation": "3.4.0",
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/native-stack": "6.11.0",
+    "@reduxjs/toolkit": "2.3.0",
+    "axios": "1.7.7",
+    "jwt-decode": "4.0.0",
+    "lottie-react-native": "7.0.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-linear-gradient": "^2.8.3",
+    "react-native-gesture-handler": "2.20.0",
+    "react-native-linear-gradient": "2.8.3",
     "react-native-mmkv": "2.12.2",
-    "react-native-pager-view": "^6.4.1",
-    "react-native-reanimated": "^3.16.0",
-    "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.8.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-pager-view": "6.4.1",
+    "react-native-reanimated": "3.16.0",
+    "react-native-responsive-fontsize": "0.5.1",
+    "react-native-safe-area-context": "4.11.1",
+    "react-native-screens": "3.34.0",
+    "react-native-svg": "15.8.0",
+    "react-native-svg-transformer": "1.5.0",
+    "react-native-vector-icons": "10.2.0",
     "react-redux": "9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
