--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "lottie-react-native": "7.0.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-device-info": "13.1.0",
+    "react-native-extra-dimensions-android": "1.2.5",
     "react-native-gesture-handler": "2.20.0",
+    "react-native-iphone-x-helper": "1.3.1",
     "react-native-linear-gradient": "2.8.3",
     "react-native-mmkv": "2.12.2",
     "react-native-pager-view": "6.4.1",
