--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "podInstall": "cd ios && pod install && cd ../",
     "cleanGradle": "cd android && ./gradlew clean && cd ../",
     "podUnInstall": "cd ios && pod deintegrate && cd ../",
-    "podSetup": "npm run podUnInstall && npm run podInstall"
+    "podSetup": "npm run podUnInstall && npm run podInstall",
+    "postinstall": "npx patch-package"
   },
   "dependencies": {
     "@homielab/react-native-auto-scroll": "0.0.10",
+    "@r0b0t3d/react-native-collapsible": "1.4.3",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-community/geolocation": "3.4.0",
     "@react-navigation/native": "6.1.18",
@@ -37,6 +39,7 @@
     "react-native-pager-view": "6.4.1",
     "react-native-reanimated": "3.16.0",
     "react-native-responsive-fontsize": "0.5.1",
+    "react-native-rolling-bar": "^1.0.0",
     "react-native-safe-area-context": "4.11.1",
     "react-native-screens": "3.34.0",
     "react-native-svg": "15.8.0",
