--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "13.1.0",
     "react-native-extra-dimensions-android": "1.2.5",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "2.20.0",
     "react-native-iphone-x-helper": "1.3.1",
     "react-native-linear-gradient": "2.8.3",
     "react-native-mmkv": "2.12.2",
     "react-native-pager-view": "6.4.1",
+    "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "3.16.0",
     "react-native-reanimated-carousel": "3.5.1",
     "react-native-responsive-fontsize": "0.5.1",
