--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "@utils/*":["utils/*"],
       "@store/*": ["store/*"],
       "@views/*": ["views/*"],
+      "@styles/*":["styles/*"]
     }
   }
 }
