-set order flow.

--- a/ios/greenGroser/Info.plist
+++ b/ios/greenGroser/Info.plist
@@ -62,6 +62,7 @@
 		<string>Okra-MediumLight.ttf</string>
 		<string>Okra-Regular.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
 		<string>EvilIcons.ttf</string>
 		<string>Ionicons.ttf</string>
 	</array>
