--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-svg-transformer": "1.5.0",
     "react-native-vector-icons": "10.2.0",
     "react-redux": "9.1.2",
-    "redux-persist": "6.0.0"
+    "redux-persist": "6.0.0",
+    "socket.io-client": "4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
