--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-rolling-bar": "^1.0.0",
     "react-native-safe-area-context": "4.11.1",
     "react-native-screens": "3.34.0",
+    "react-native-splash-screen": "3.3.0",
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "1.5.0",
     "react-native-vector-icons": "10.2.0",
