--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-reanimated-carousel": "3.5.1",
     "react-native-responsive-fontsize": "0.5.1",
     "react-native-rolling-bar": "^1.0.0",
-    "react-native-safe-area-context": "4.11.1",
+    "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "3.34.0",
     "react-native-splash-screen": "3.3.0",
     "react-native-svg": "15.8.0",
